--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/controllers/inscription.js"></script>
         <!-- endbuild -->
 </body>
 </html>
