--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,9 @@
         <script src="scripts/services/ajaxFactory.js"></script>
         <script src="scripts/controllers/tarif.js"></script>
         <script src="scripts/controllers/inscription.js"></script>
+        <script src="scripts/controllers/faq.js"></script>
+        <script src="scripts/controllers/support.js"></script>
+        <script src="scripts/controllers/informationrequest.js"></script>
         <!-- endbuild -->
 </body>
 </html>
