--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src="scripts/controllers/faq.js"></script>
         <script src="scripts/controllers/support.js"></script>
         <script src="scripts/controllers/informationrequest.js"></script>
+        <script src="scripts/controllers/datatest.js"></script>
         <!-- endbuild -->
 </body>
 </html>
