--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
         <script src="scripts/controllers/support.js"></script>
         <script src="scripts/controllers/informationrequest.js"></script>
         <script src="scripts/controllers/testjson.js"></script>
+        <script src="scripts/controllers/profil.js"></script>
+        <script src="scripts/controllers/dbmanagement.js"></script>
         <script src="scripts/filters/stringtohtml.js"></script>
         <!-- endbuild -->
 </body>
