Create files for admin back office

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,27 @@
 
     <!-- Add your site or application content here -->
 
+    <ul>
+      <li>
+        <a ui-sref="home">home</a>
+      </li>
+      <li>
+        <a ui-sref="login">login</a>
+      </li>
+      <li>
+        <a ui-sref="faq">faq</a>
+      </li>
+      <li>
+        <a ui-sref="gsc">gsc</a>
+      </li>
+      <li>
+        <a ui-sref="inscription">inscription</a>
+      </li>
+      <li>
+        <a ui-sref="tarif">tarif</a>
+      </li>
+    </ul>
+
     <div ui-view></div>
 
 
@@ -66,6 +87,14 @@
         <script src="scripts/controllers/informationrequest.js"></script>
         <script src="scripts/controllers/testjson.js"></script>
         <script src="scripts/filters/stringtohtml.js"></script>
+        <script src="scripts/controllers/admin-dashboard.js"></script>
+        <script src="scripts/controllers/users.js"></script>
+        <script src="scripts/controllers/user.js"></script>
+        <script src="scripts/controllers/databases.js"></script>
+        <script src="scripts/controllers/database.js"></script>
+        <script src="scripts/controllers/pages.js"></script>
+        <script src="scripts/controllers/page.js"></script>
+        <script src="scripts/controllers/analytics.js"></script>
         <!-- endbuild -->
 </body>
 </html>
