--- a/app/index.html
+++ b/app/index.html
@@ -57,8 +57,8 @@
             <li><a id="GoToContact" href="#/contact">Contact</a></li>
           </ul>
           <div class="navbar-right">
-            <a href="/login#Login" class="btn btn-bordered">Connexion</a>
-            <a href="/login#register" class="btn btn-primary">Enregistrement</a>
+            <a href="#/login#Login" class="btn btn-bordered">Connexion</a>
+            <a href="#/login" class="btn btn-primary">Enregistrement</a>
           </div>
         </div>
         <!--/.nav-collapse -->
@@ -66,10 +66,27 @@
     </div>
   </header>
   <!-- End header -->
-
   <div ui-view></div>
-
-
+  <div class="clearfix"></div>
+  <!-- Start footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="social-network">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-skype"></i></a>
+            <a href="#"><i class="fa fa-pinterest"></i></a>
+          </div>
+          <app-footer></app-footer>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- End footer -->
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
     ! function(A, n, g, u, l, a, r) {
@@ -99,6 +116,8 @@
   <script src="bower_components/navbar/navbar.umd.js"></script>
   <script src="bower_components/flexslider/jquery.flexslider.js"></script>
   <script src="bower_components/wow/dist/wow.js"></script>
+  <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
+  <script src="bower_components/jquery.appear/jquery.appear.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -123,6 +142,8 @@
   <script src="scripts/controllers/cgu.js"></script>
   <script src="scripts/controllers/motivation.js"></script>
   <script src="scripts/controllers/plan.js"></script>
+  <script src="scripts/directives/appfooter.js"></script>
+  <script src="scripts/directives/backimg.js"></script>
   <!-- endbuild -->
 
 </body>
