Interfacage avec l'API

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
 
   <!-- Start header -->
   <header>
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation" style="position: relative;">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -154,6 +154,8 @@
         <script src="scripts/controllers/motivation.js"></script>
         <script src="scripts/controllers/plan.js"></script>
         <script src="scripts/directives/backimg.js"></script>
+        <script src="scripts/controllers/profilupdate.js"></script>
+        <script src="scripts/controllers/password.js"></script>
         <!-- endbuild -->
 
 </body>
