--- a/app/index.html
+++ b/app/index.html
@@ -145,6 +145,9 @@
   <script src="bower_components/jquery.appear/jquery.appear.js"></script>
   <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
   <script src="bower_components/ui-to-top/js/jquery.ui.totop.js"></script>
+  <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
+  <script src="bower_components/waypoints/lib/noframework.waypoints.js"></script>
+  <script src="bower_components/Scroll-To/scrollTo.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
