--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
             <li><a id="GoToHome" href="/" class="selected">Accueil</a></li>
             <li><a id="GoToFeatures" href="#/caracteristiques">Caractéristiques</a></li>
             <li><a id="GoToPricing" href="#/tarif">Prix</a></li>
+            <li><a id="GoToFAQ" href="#/faq">FAQ</a></li>
             <li><a id="GoToContact" href="#/contact">Contact</a></li>
           </ul>
           <div class="navbar-right">
