update des content

--- a/app/index.html
+++ b/app/index.html
@@ -145,6 +145,8 @@
   <script src="bower_components/jquery.appear/jquery.appear.js"></script>
   <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
   <script src="bower_components/ui-to-top/js/jquery.ui.totop.js"></script>
+  <script src="bower_components/tinymce-dist/tinymce.js"></script>
+  <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
