Ajout angular:route associate

--- a/app/index.html
+++ b/app/index.html
@@ -182,6 +182,7 @@
   <script src="scripts/directives/backimg.js"></script>
   <script src="scripts/controllers/profilupdate.js"></script>
   <script src="scripts/controllers/password.js"></script>
+  <script src="scripts/controllers/associate.js"></script>
   <!-- endbuild -->
   <script src="scripts/jquery/flexslider.js"></script>
   <script src="scripts/jquery/jquery.parallax.js"></script>
