--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 
   <!-- Start header -->
   <header>
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation" style="position: relative;">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -144,14 +144,13 @@
   <script src="bower_components/jquery.appear/jquery.appear.js"></script>
   <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
   <script src="bower_components/ui-to-top/js/jquery.ui.totop.js"></script>
+  <script src="bower_components/tinymce-dist/tinymce.js"></script>
+  <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
   <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
   <script src="bower_components/waypoints/lib/noframework.waypoints.js"></script>
   <script src="bower_components/Scroll-To/scrollTo.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
-
-
-
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/home.js"></script>
@@ -181,6 +180,8 @@
   <script src="scripts/controllers/motivation.js"></script>
   <script src="scripts/controllers/plan.js"></script>
   <script src="scripts/directives/backimg.js"></script>
+  <script src="scripts/controllers/profilupdate.js"></script>
+  <script src="scripts/controllers/password.js"></script>
   <!-- endbuild -->
   <script src="scripts/jquery/jquery.flexslider.js"></script>
   <script src="scripts/jquery/flexslider.js"></script>
