--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css" />
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="bower_components/flexslider/flexslider.css" />
   <link rel="stylesheet" href="bower_components/pixeden-stroke-7-icon/pe-icon-7-stroke/dist/pe-icon-7-stroke.css" />
   <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
   <!-- endbower -->
@@ -139,6 +140,7 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
   <script src="bower_components/navbar/navbar.umd.js"></script>
+  <script src="bower_components/flexslider/jquery.flexslider.js"></script>
   <script src="bower_components/wow/dist/wow.js"></script>
   <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
   <script src="bower_components/jquery.appear/jquery.appear.js"></script>
@@ -149,6 +151,7 @@
   <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
   <script src="bower_components/waypoints/lib/noframework.waypoints.js"></script>
   <script src="bower_components/Scroll-To/scrollTo.js"></script>
+  <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -182,12 +185,7 @@
   <script src="scripts/directives/backimg.js"></script>
   <script src="scripts/controllers/profilupdate.js"></script>
   <script src="scripts/controllers/password.js"></script>
-<<<<<<< HEAD
-=======
-  <script src="scripts/controllers/associate.js"></script>
->>>>>>> 0cd1b500cf75987aeb985c5504a0fbae0f1d358e
   <!-- endbuild -->
-  <script src="scripts/jquery/jquery.flexslider.js"></script>
   <script src="scripts/jquery/flexslider.js"></script>
   <script src="scripts/jquery/jquery.parallax.js"></script>
   <script src="scripts/jquery/parallax.js"></script>
