--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
           </ul>
           <div class="navbar-right">
             <a href="#/login#Login" class="btn btn-bordered">Connexion</a>
-            <a href="#/login" class="btn btn-primary">Enregistrement</a>
+            <a href="#/inscription" class="btn btn-primary">Enregistrement</a>
           </div>
         </div>
         <!--/.nav-collapse -->
