--- a/app/index.html
+++ b/app/index.html
@@ -184,6 +184,8 @@
   <script src="scripts/controllers/password.js"></script>
   <script src="scripts/controllers/createdatabase.js"></script>
   <script src="scripts/controllers/associate.js"></script>
+  <script src="scripts/controllers/abonnement.js"></script>
+  <script src="scripts/controllers/desabonnement.js"></script>
   <!-- endbuild -->
   <script src="scripts/jquery/jquery.flexslider.js"></script>
   <script src="scripts/jquery/flexslider.js"></script>
