--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css" />
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
-  <link rel="stylesheet" href="bower_components/flexslider/flexslider.css" />
   <link rel="stylesheet" href="bower_components/pixeden-stroke-7-icon/pe-icon-7-stroke/dist/pe-icon-7-stroke.css" />
   <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+  <link rel="stylesheet" href="bower_components/flexslider/flexslider.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -61,8 +61,7 @@
             <li><a id="GoToContact" href="#/contact">Contact</a></li>
           </ul>
           <div class="navbar-right">
-            <a href="#/login#Login" class="btn btn-bordered">Connexion</a>
-            <a href="#/inscription" class="btn btn-primary">Enregistrement</a>
+            <a ui-sref="login" class="btn btn-bordered">S'identifier</a>
           </div>
         </div>
         <!--/.nav-collapse -->
@@ -140,7 +139,6 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
   <script src="bower_components/navbar/navbar.umd.js"></script>
-  <script src="bower_components/flexslider/jquery.flexslider.js"></script>
   <script src="bower_components/wow/dist/wow.js"></script>
   <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
   <script src="bower_components/jquery.appear/jquery.appear.js"></script>
@@ -151,7 +149,7 @@
   <script src="bower_components/jquery-smooth-scroll/jquery.smooth-scroll.js"></script>
   <script src="bower_components/waypoints/lib/noframework.waypoints.js"></script>
   <script src="bower_components/Scroll-To/scrollTo.js"></script>
-  <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
+  <script src="bower_components/flexslider/jquery.flexslider.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
