Add route admin/orders

--- a/app/index.html
+++ b/app/index.html
@@ -200,6 +200,7 @@
   <script src="scripts/controllers/createdatabase.js"></script>
   <script src="scripts/controllers/associate.js"></script>
   <script src="scripts/controllers/admin-dashboard.js"></script>
+  <script src="scripts/controllers/admin-orders.js"></script>
   <script src="scripts/controllers/abonnement.js"></script>
   <script src="scripts/controllers/desabonnement.js"></script>
   <!-- endbuild -->
