--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
   <link rel="stylesheet" href="bower_components/flexslider/flexslider.css" />
   <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
+  <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -165,6 +166,7 @@
   <script src="bower_components/textAngular/dist/textAngular.js"></script>
   <script src="bower_components/textAngular/dist/textAngular-sanitize.js"></script>
   <script src="bower_components/textAngular/dist/textAngularSetup.js"></script>
+  <script src="bower_components/angular-ui-select/dist/select.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -201,6 +203,8 @@
   <script src="scripts/controllers/associate.js"></script>
   <script src="scripts/controllers/admin-dashboard.js"></script>
   <script src="scripts/controllers/admin-orders.js"></script>
+  <script src="scripts/controllers/admin-order.js"></script>
+  <script src="scripts/controllers/admin-order-download.js"></script>
   <script src="scripts/controllers/abonnement.js"></script>
   <script src="scripts/controllers/desabonnement.js"></script>
   <!-- endbuild -->
