--- a/app/index.html
+++ b/app/index.html
@@ -63,8 +63,8 @@
             <li><a id="GoToContact" href="#/contact">Contact</a></li>
           </ul>
           <div class="navbar-right">
-            <a ui-sref="login" class="btn btn-bordered" ng-hide="token">S'identifier</a>
-            <a ui-sref="logout" class="btn btn-bordered" ng-show="token">Se déconnecter</a>
+            <a ui-sref="login" class="btn btn-bordered" ng-hide="user.token">S'identifier</a>
+            <a ui-sref="logout" class="btn btn-bordered" ng-show="user.token">Se déconnecter</a>
           </div>
         </div>
         <!--/.nav-collapse -->
