Ajout du logout

--- a/app/index.html
+++ b/app/index.html
@@ -193,6 +193,7 @@
   <script src="scripts/controllers/admin-dashboard.js"></script>
   <script src="scripts/controllers/abonnement.js"></script>
   <script src="scripts/controllers/desabonnement.js"></script>
+  <script src="scripts/controllers/logout.js"></script>
   <!-- endbuild -->
   <script src="scripts/jquery/flexslider.js"></script>
   <script src="scripts/jquery/jquery.parallax.js"></script>
