--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="bower_components/pixeden-stroke-7-icon/pe-icon-7-stroke/dist/pe-icon-7-stroke.css" />
   <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+  <link rel="stylesheet" href="bower_components/rickshaw/rickshaw.css" />
   <link rel="stylesheet" href="bower_components/flexslider/flexslider.css" />
   <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
   <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
@@ -160,6 +161,7 @@
   <script src="bower_components/Scroll-To/scrollTo.js"></script>
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
+  <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/rickshaw/rickshaw.js"></script>
   <script src="bower_components/angular-messages/angular-messages.js"></script>
   <script src="bower_components/flexslider/jquery.flexslider.js"></script>
@@ -213,11 +215,7 @@
   <script src="scripts/controllers/abonnement.js"></script>
   <script src="scripts/controllers/desabonnement.js"></script>
   <script src="scripts/controllers/logout.js"></script>
-<<<<<<< HEAD
-  <script src="scripts/controllers/showdatabase.js"></script>
-=======
   <script src="scripts/controllers/tarifs.js"></script>
->>>>>>> master
   <!-- endbuild -->
   <script src="scripts/jquery/flexslider.js"></script>
   <script src="scripts/jquery/jquery.parallax.js"></script>
